# hackathon-nus

./: pyproject.toml
alembic/: env.py
alembic/versions/: 0002_create_users_table.py  0003_add_is_onboarded_to_users.py  0004_add_onboarding_step_to_users.py  0005_set_is_onboarded_default_true.py  0006_add_icbtprogram_model.py  6f7378a5e97d_add_icbtprogram_model.py
backend/: main.py
backend/api/: icbt_router.py
backend/core/: config.py  database.py  dependencies.py  middleware.py
backend/models/: icbt.py  user.py
backend/repository/: user_repository.py
backend/router/: auth_router.py
backend/schema/: auth.py  icbt.py
backend/services/: auth_service.py
docs/: api_docs.md  database_docs.md
frontend/: FRONTEND.md
frontend/src/app/routes/: ProtectedRoute.tsx  router.tsx
frontend/src/features/auth/api/: authApi.ts
frontend/src/features/auth/hooks/: useCompleteOnboarding.ts  useLogin.ts  useMe.ts  useSignup.ts
frontend/src/features/auth/pages/: LoginPage.tsx  SignupPage.tsx
frontend/src/features/dashboard/pages/: DashboardPage.tsx
frontend/src/features/onboarding/pages/: OnboardingPage.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/stores/: authStore.ts
frontend/src/shared/types/: auth.ts  index.ts
frontend/src/styles/: global.css  tokens.css
